--- a/nfs-csi-example/nfscsi/nfscsi.yaml
+++ b/nfs-csi-example/nfscsi/nfscsi.yaml
@@ -21,4 +21,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: nfs-csi
+  storageClassName: nfs-csi        # 指定的storageClass
