--- a/deploy/testcri.yaml
+++ b/deploy/testcri.yaml
@@ -2,7 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: mycsi-sc
-provisioner: mycsi.jtthink.com
+provisioner: mycsi.practice.com
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
